--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
   },
   "homepage": "https://github.com/lekeodewuyi/explorer-one-frontend#readme",
   "devDependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
+    "@babel/cli": "^7.12.8",
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.12.7",
     "autoprefixer": "^9.8.6",
     "axios": "^0.20.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.2.1",
+    "babel-loader": "^8.2.2",
     "babel-preset-env": "^1.7.0",
     "browser-image-compression": "^1.0.13",
     "css-loader": "^4.3.0",
@@ -42,10 +42,10 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
-    "jwt-decode": "^3.1.1",
+    "jwt-decode": "^3.1.2",
     "mini-css-extract-plugin": "^0.11.3",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "postcss-loader": "^4.0.4",
+    "postcss-loader": "^4.1.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^1.3.0",
     "terser-webpack-plugin": "^4.2.3",
@@ -55,6 +55,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "dompurify": "^2.2.2",
     "smoothscroll-polyfill": "^0.4.4"
   }
 }
